[project]
name = "chatclicks"
version = "0.4.2"
authors = [
  { name="willpiledriver", email="smifthsmurfth@gmail.com" },
]
description = "A client for the Twitch Extension named Chat Clicks"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
keywords = ["twitch", "extension", "client", "chat"]
dependencies = ["python-socketio", "scikit-learn", "numpy", "aiohttp", "asyncio"]

[project.urls]
"Homepage" = "https://github.com/WillPiledriver/chatclicks"